@@ -1,0 +1,9 @@
+#!/bin/sh -x
+
+perl Makefile.PL PREFIX=$PERL
+
+rm *.tar.gz
+
+make tardist
+
+cpan-upload *.tar.gz
