@@ -1,0 +1,7 @@
+#!/usr/bin/perl
+
+use DBIx::Connect;
+
+$ENV{DBIX_CONN} = "complex_conf";
+
+
