@@ -1,0 +1,9 @@
+[slash]
+dsn dbi:mysql:database=slash;host=localhost
+user slash
+#pass <STDIN>
+#pass slash
+attr ChopBlanks = 1
+attr PrintError = 1
+attr RaiseError = 1
+attr AutoCommit = 1
